# elephant_agent

./: .dockerignore  .env.example  .gitignore  AGENTS_USE.md  LICENSE  QUICKGUIDE.md  README.md  SCALING.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  graph.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: context.py  tickets.py
backend/app/core/: config.py  database.py  teams.py
backend/app/repositories/: event_repository.py  ticket_repository.py
backend/app/schemas/: analysis.py  context.py  events.py  tickets.py
backend/app/services/: codebase.py  communicator.py  email.py  github.py  ingestion.py  linear.py  llm.py  observability.py  ticket_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/context/: route.ts
frontend/app/api/observability/summary/: route.ts
frontend/app/api/tickets/: route.ts
frontend/app/api/tickets/[ticketId]/events/: route.ts
frontend/app/api/tickets/[ticketId]/resolve/: route.ts
frontend/components/: ticket-dashboard.tsx
frontend/lib/: backend.ts  types.ts
scripts/: run-test-db.ps1  run-test-db.sh  smoke-test-backend.ps1
