[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elephant-agent-backend"
version = "0.1.0"
description = "MVP ticket intake and routing backend for Elephant Agent."
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "langgraph>=0.2,<1.0",
  "pydantic-settings>=2.5,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "typing-extensions>=4.12,<5.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
